[spring-mvc-blog] - adding main-page, i18n, bootstrap, fragments.